# athena-square-earth

./: .gitignore  .mcp.json  FULL_PROJECT_TESSERACT_SYNTHESIS_2026-03-11.md  LICENSE  MEGALITHIC TOME GENERATOR — “Latent Tunneling _ Multi‑Scale Math Stack (Macro ↔ PZPM ↔ CUT)” _Skeleton_.4d.md  MYCELIUM_TOME_PART1.4d.md  MYCELIUM_TOME_PART1.md  README.md  VOID_CH11.md  athena.ps1  node.yaml  pyproject.toml
MATH/FINAL FORM/FRAMEWORKS CODE/ATLAS FORGE  - Framework/: README.md  pyproject.toml  setup.py
MATH/FINAL FORM/FRAMEWORKS CODE/ATLAS FORGE  - Framework/atlasforge/: __init__.py  atlasforge_init_enhanced.py  verify_installation.py
MATH/FINAL FORM/FRAMEWORKS CODE/ATLAS FORGE  - Framework/docs/: ATLASFORGE_FINAL_MANUAL.md  ATLASFORGE_FINAL_MANUAL.tex  README_COMPLETE.md
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/: CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PROMOTION_MANIFEST.md  README.md  promotion_manifest.json  pyproject.toml  requirements.txt
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/aqm/: __init__.py  addressing.py  canonical.py  certs.py  cli.py  hashing.py  jets.py  kernel.py  ledger.py  manifest.py  operator_graph.py  outcomes.py  router.py  store.py
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/aqm/apps/: __init__.py
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/docs/: 01_QUICKSTART.md  02_QPHI_ALGORITHM.md  03_LENSES.md  04_DATA_PIPELINE.md  05_OUTPUTS_AND_REPRODUCIBILITY.md  06_EXTENDING_AND_CALIBRATION.md  07_AQM_KERNEL.md  08_API_REFERENCE.md  09_VALIDATION.md  10_COMMERCIAL_PACKAGING.md  GLOSSARY.md  INDEX.md
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/docs/source_material/: AQM MASTER TOME.4d.md  AQM Q-Algorithm Master Tome ΓÇö Circle Γùï within Square Γûí within Triangle Γû│.4d.md
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/examples/: plot_sky_samples.py  run_qphi_demo.py
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/qphi_out_smoke/: ledger.json  summary.json
MATH/LIVE_PROMOTED/aqm_kernel_qphi_planet9/tests/: test_determinism.py  test_orbits.py
self_actualize/promoted_live_roots/atlasforge_framework/: PROMOTION_MANIFEST.md  README.md  promotion_manifest.json  pyproject.toml  setup.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/: __init__.py  atlasforge_init_enhanced.py  verify_installation.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/adaptive/: __init__.py  adaptive.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/adaptive_hybrid/: __init__.py  adaptive_hybrid.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aether/: __init__.py  aether.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aether_lattice/: __init__.py  aether_lattice.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/alg_geom/: alg_geom.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_arithmetic/: __init__.py  aqm_arithmetic.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_foundation/: __init__.py  aqm_foundation.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_integration/: __init__.py  aqm_integration.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_kernel/: __init__.py  aqm_kernel.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_liminal/: __init__.py  aqm_liminal.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_realization/: __init__.py  aqm_realization.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/aqm_synthesis/: __init__.py  aqm_synthesis.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/arith_dyn/: __init__.py  arith_dyn.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/arithmetic/: __init__.py  arithmetic.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/arithmetic_geom/: __init__.py  arithmetic_geom.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/atlas/: __init__.py  atlas.py  book.py  navigator.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/automata/: __init__.py  automata.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/biology/: __init__.py  biology.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/bound_compiler/: __init__.py  bound_compiler.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/categorical/: __init__.py  categorical.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/category/: category.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/certificates/: __init__.py  certificate.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/clifford/: __init__.py  clifford.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/constraints/: __init__.py  bracketing.py  constraint.py  solvers.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/continued_frac/: __init__.py  continued_frac.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/core/: __init__.py  base.py  enums.py  types.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/coupling/: __init__.py  coupling.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/crystal/: __init__.py  crystal.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/crystal_merge/: __init__.py  crystal_merge.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/crystal_treatise/: __init__.py  crystal_treatise.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/cyclotomic/: __init__.py  cyclotomic.py
self_actualize/promoted_live_roots/atlasforge_framework/atlasforge/decoherence/: __init__.py  decoherence.py
self_actualize/promoted_live_roots/atlasforge_framework/docs/: ATLASFORGE_FINAL_MANUAL.md  ATLASFORGE_FINAL_MANUAL.tex  README_COMPLETE.md
(+13886 files in other folders)
