# CRYSTAL: Xi108:W3:A12:S18 | face=F | node=281 | depth=1 | phase=Mutable
# METRO: Sa
# BRIDGES: Xi108:W3:A12:S17→Xi108:W3:A12:S19→Xi108:W2:A12:S18→Xi108:W3:A11:S18

[project]
name = "athena-mcp-server"
version = "1.0.0"
description = "MCP server for the Athena 108D Crystal Hologram nervous system — 41 tools, 11 resources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
