# CRYSTAL: Xi108:W2:A3:S22 | face=C | node=263 | depth=0 | phase=Mutable
# METRO: Sa
# BRIDGES: Xi108:W2:A3:S21→Xi108:W2:A3:S23→Xi108:W1:A3:S22→Xi108:W3:A3:S22→Xi108:W2:A2:S22→Xi108:W2:A4:S22

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasforge"
version = "4.0.0"
description = "Proof-Carrying Recipe Compiler for Chart-Rewritten Constraint Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "numerical-methods",
    "constraint-solving",
    "interval-arithmetic",
    "verified-computation",
    "certificate",
    "root-finding"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Documentation = "https://github.com/atlasforge/atlasforge"
Repository = "https://github.com/atlasforge/atlasforge"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
