# CRYSTAL: Xi108:W3:A1:S14 | face=S | node=435 | depth=3 | phase=Cardinal
# METRO: Sa
# BRIDGES: Xi108:W3:A1:S13→Xi108:W3:A1:S15→Xi108:W2:A1:S14→Xi108:W3:A2:S14

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polestargemm"
version = "1.0.0"
description = "PoleStarGEMM: Quad-Polar Adaptive GEMM + Vision Low-Rank Optimizer"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "torch>=2.0",
]

[project.optional-dependencies]
sparse = ["scipy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
