# CRYSTAL: Xi108:W1:A3:S25 | face=R | node=142 | depth=2 | phase=Mutable
# METRO: Sa
# BRIDGES: Xi108:W1:A3:S24→Xi108:W1:A3:S26→Xi108:W2:A3:S25→Xi108:W1:A2:S25→Xi108:W1:A4:S25

cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
project(adaptive_qpgemm_deploy CXX)

find_package(Torch REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Torch sets important compiler flags (including ABI) via TORCH_CXX_FLAGS.
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

add_executable(qpgemm_infer src/qpgemm_infer.cpp)
target_link_libraries(qpgemm_infer "${TORCH_LIBRARIES}")

add_executable(qpgemm_stress src/qpgemm_stress.cpp)
target_link_libraries(qpgemm_stress "${TORCH_LIBRARIES}")

# Recommended by PyTorch for Windows to copy DLLs post-build.
if (MSVC)
  file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
  add_custom_command(TARGET qpgemm_infer
                     POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     ${TORCH_DLLS}
                     $<TARGET_FILE_DIR:qpgemm_infer>)
  add_custom_command(TARGET qpgemm_stress
                     POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     ${TORCH_DLLS}
                     $<TARGET_FILE_DIR:qpgemm_stress>)
endif()
